--- a/billet1F.html
+++ b/billet1F.html
@@ -10,7 +10,7 @@
 
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #ffefd5; /* Couleur sable clair */
+            background-color: #e3caab; /* Couleur sable clair */
             margin: 0;
             padding: 0;
             text-align: center;
@@ -38,7 +38,7 @@
 
         .ticket {
             background-color: #fffacd; /* Jaune pastel */
-            border: 2px dashed #8b4513; /* Style "billet" */
+            border: 2px dashed #AC8460; /* Style "billet" */
             border-radius: 15px;
             padding: 20px;
             width: 250px;
@@ -46,12 +46,12 @@
         }
 
         h2 {
-            color: #8b4513; /* Brun terre */
+            color: #AC8460; /* Brun terre */
             font-size: 1.8rem;
         }
 
         button {
-            background-color: #8b4513; /* Brun sable clair */
+            background-color: #AC8460; /* Brun sable clair */
             color: white;
             border: none;
             border-radius: 10px;
@@ -67,7 +67,7 @@
         }
 
         footer {
-            background-color: #8b4513; /* Vert forêt */
+            background-color: #AC8460; /* Vert forêt */
             color: white;
             padding: 10px 0;
             position: fixed;
@@ -99,8 +99,8 @@
         }
 
         .image-container img {
-            max-width: 100%;
-            height: auto;
+            width: 300px; /* Largeur spécifique */
+            height: auto; /* Maintien des proportions */
             border-radius: 15px;
             box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2);
         }
@@ -137,7 +137,11 @@
         </div>
     </div>
 
-   
+    <!-- Conteneur de l'image -->
+    <div class="image-container">
+        <img src="leopard.jpg" alt="Un léopard de Zootopia">
+    </div>
+
     <footer>
         <p>© 2024 Zootopia - Tous droits réservés</p>
     </footer>
