--- a/pagedacF.html
+++ b/pagedacF.html
@@ -121,14 +121,14 @@
         }
 
         .video-banner {
-    position: absolute;
-    top: 150px; /* Décale la vidéo vers le bas */
-    left: 0;
-    width: 100%;
-    height: 200px; /* Hauteur de la bandeau */
-    overflow: hidden;
-    z-index: -1; /* S'assurer que la vidéo soit derrière le contenu */
-}
+            position: absolute;
+            top: 150px; /* Décale la vidéo vers le bas */
+            left: 0;
+            width: 100%;
+            height: 200px; /* Hauteur de la bandeau */
+            overflow: hidden;
+            z-index: -1; /* S'assurer que la vidéo soit derrière le contenu */
+        }
 
         .video-banner video {
             width: 100%;
@@ -151,7 +151,7 @@
     <div class="ticket-container">
         <!-- Logo pour la billetterie -->
         <img src="billet.jpg" alt="Icone de billetterie" class="ticket-logo">
-        <a href="billetF.html" class="ticket-link">Billetterie</a>
+        <a href="billet1F.html" class="ticket-link">Billetterie</a>
     </div>
 
     <!-- Bandeau vidéo en boucle -->
@@ -166,7 +166,7 @@
         <h1 class="title">ZOOTOPIA</h1>
         <p class="tagline">Partez à l'aventure au cœur de la nature sauvage !</p>
         <div class="logo-container">
-            <img src="logo3.jpg" alt="Logo Zootopia" class="logo">
+            <img src="file.png" alt="Logo Zootopia" class="logo">
         </div>
 
         <!-- Liens sous le logo -->
