--- a/coF.html
+++ b/coF.html
@@ -34,6 +34,7 @@
             padding: 30px;
             width: 300px;
             margin-top: 20px;
+            position: relative;
         }
 
         input {
@@ -95,6 +96,19 @@
             height: auto;
             margin-top: 20px;
         }
+
+        .branch-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .branch {
+            width: 500px; /* Largeur de l'image de branche */
+            height: auto;
+        }
     </style>
 </head>
 <body>
@@ -106,15 +120,24 @@
 
     <h1>Connexion</h1>
 
-    <div class="container">
-        <form action="#">
-            <input type="text" placeholder="Nom d'utilisateur" required><br>
-            <input type="password" placeholder="Mot de passe" required><br>
-            <button type="submit">Se connecter</button>
-        </form>
+    <div class="branch-container">
+        <!-- Image de branche gauche -->
+        <img src="branche.jpg" alt="Branche gauche" class="branch">
 
-        <!-- Lien vers la page d'inscription -->
-        <p><a href="sinscrireF.html" class="signup-link">Vous n'avez pas de compte ? S'inscrire</a></p>
+        <!-- Formulaire de connexion -->
+        <div class="container">
+            <form action="#">
+                <input type="text" placeholder="Nom d'utilisateur" required><br>
+                <input type="password" placeholder="Mot de passe" required><br>
+                <button type="submit">Se connecter</button>
+            </form>
+
+            <!-- Lien vers la page d'inscription -->
+            <p><a href="sinscrireF.html" class="signup-link">Vous n'avez pas de compte ? S'inscrire</a></p>
+        </div>
+
+        <!-- Image de branche droite -->
+        <img src="branche.jpg" alt="Branche droite" class="branch">
     </div>
 </body>
 </html>
