--- a/aproposF.html
+++ b/aproposF.html
@@ -10,7 +10,7 @@
             font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f5ebdc;
+            background-color: #e3caab;
             color: #333;
             line-height: 1.6;
             display: flex;
@@ -58,7 +58,7 @@
 
         .director {
             width: 45%;
-            background-color: #f5ebdc;
+            background-color: #e3caab;
             border: 2px solid #3e8e41;
             border-radius: 10px;
             padding: 20px;
