--- a/aproposF.html
+++ b/aproposF.html
@@ -163,6 +163,11 @@
     <footer>
         <p>&copy; 2024 Zootopia. Tous droits réservés.</p>
     </footer>
+    <!-- Footer -->
+<footer>
+
+    <p><a href="admin.html" style="color: #3e8e41; font-weight: bold;">Accéder à la page d'administration</a></p>
+</footer>
 
 </body>
 </html>
